[project]
name = "jobby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.8.0",
    "datamodel-code-generator>=0.26.0",
    "grist-api>=0.1.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]
